XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>

* Bug fix: no more cursor jumping to another line if the feature of stripping
  trailing spaces on save is switched on and a line has trailing spaces and the
  cursor is at the end of the line.
* Strip ability to have many non-nested dirs in a project.
* New feature: project specific paths to resolve imports.
* New feature: code completion (TAB, Ctrl + \, Ctrl + Space).
* Dependency from the rope library is introduced.


2011 Nov 29  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.3
* Bug fix: correct tooltips for search results in the HTML files. Issue #188.
* Bug fix: prevent NUL characters appear in the text editor. Issue #203.
* New feature: auto trimming empty lines when a cursor is moved. Issue #294.
* New feature: Ctrl+N will iterate over highlighted words if the current word
  matches the previously highlighted. Ctrl+,/. will iterate over the
  highlighted words regardless on what word the cursor is. Issue #303.
* New feature: double click on the status bar path label copies the file path
  to the clipboard.
* New feature: detecting files changed outside of codimension.
* Bug fix: loading project from the filesystem browser checks if the opened
  files are saved. Issue #295.
* Some fixes in the replace implementation.
* Bug fix: incorrect interpretation of the search pattern in 'Find in files'.
  Issue #301.
* Ctrl+C/Ctrl+Insert to copy the current line if there is no selection.
  Issue #304.
* New editor setting: auto remove trailing spaces on saving. Issue #300.
* New setting: HOME moves the cursor to position 0 or to the first non space
  character. Issue #302.
* Share the 'find' and 'replace what' search history. Issue #298.
* Make the match selected in the incremental find/replace. Issue #297.
* Bug fix in the replace implementation. Adding separate button 'replace and
  move'. Issue #277.
* Making Ctrl+F and Ctrl+R select the text to search even if the widget has